Pending changes in the mainline
===============================

* Add ".dcm" suffix to files in ZIP archives (cf. URI ".../archive")
* "/tools/create-dicom": Support of binary tags encoded using data URI scheme
* "/tools/create-dicom": Support of hierarchical structures (creation of sequences)
* "/modify" can insert/modify sequences

Plugins
-------

* New function "OrthancPluginRegisterErrorCode()" to declare custom error codes
* New function "OrthancPluginRegisterDictionaryTag()" to declare DICOM tags

Lua
---

* Optional argument "keepStrings" in "DumpJson()"

Maintenance
-----------

* Fix issue 4 (C-Store Association not renegotiated on Specific-to-specific transfer syntax change)
* "/system" URI gives information about the plugins used for storage area and DB back-end
* Plugin callbacks should now return explicit "OrthancPluginErrorCode" instead of integers
* "/tools/create-dicom" can create tags with unknown VR


Version 0.9.4 (2015/09/16)
==========================

* Preview of PDF files encapsulated in DICOM from Orthanc Explorer
* Creation of DICOM files with encapsulated PDF through "/tools/create-dicom"
* "limit" and "since" arguments while retrieving DICOM resources in the REST API
* Support of "deflate" and "gzip" content-types in HTTP requests
* Options to validate peers against CA certificates in HTTPS requests
* New configuration option: "HttpTimeout" to set the default timeout for HTTP requests

Lua
---

* More information about the origin request in the "OnStoredInstance()" and
  "ReceivedInstanceFilter()" callbacks. WARNING: This can result in
  incompatibilities wrt. previous versions of Orthanc.
* New function "GetOrthancConfiguration()" to get the Orthanc configuration

Plugins
-------

* New functions to compress/uncompress images using PNG and JPEG
* New functions to issue HTTP requests from plugins
* New function "OrthancPluginBufferCompression()" to (un)compress memory buffers